--- a/Server Settings/Live/ServerHostSettings.json
+++ b/Server Settings/Live/ServerHostSettings.json
@@ -17,7 +17,7 @@
   "DisableDebugEvents": false,
   "Rcon": {
     "Enabled": true,
-    "Port": "9587",
-    "Password": "Jp3#7f$Kv@j6"
+    "Port": "BLOCKED",
+    "Password": "BLOCKED"
   }
 }
