--- a/Server Settings/PTS/ServerHostSettings.json
+++ b/Server Settings/PTS/ServerHostSettings.json
@@ -17,7 +17,7 @@
   "DisableDebugEvents": false,
   "Rcon": {
     "Enabled": false,
-    "Port": BLOCKED,
+    "Port": "BLOCKED",
     "Password": ""
   }
 }
