--- a/BepInEx/config/RandomEncounters/Items.cfg
+++ b/BepInEx/config/RandomEncounters/Items.cfg
@@ -98,7 +98,7 @@ Item_Ingredient_Bloodmaggot = false
 ## Blood Potion https://gaming.tools/v-rising/items/item_consumable_prisonpotion
 # Setting type: Boolean
 # Default value: true
-Item_Consumable_PrisonPotion = true
+Item_Consumable_PrisonPotion = false
 
 ## Blood Rose https://gaming.tools/v-rising/items/item_ingredient_plant_bloodrose
 # Setting type: Boolean
