--- a/BepInEx/config/RandomEncounters/Items.cfg
+++ b/BepInEx/config/RandomEncounters/Items.cfg
@@ -343,12 +343,12 @@ Item_Ingredient_CastleKey_T02 = false
 ## Copper Ingot https://gaming.tools/v-rising/items/item_ingredient_copperingot
 # Setting type: Boolean
 # Default value: true
-Item_Ingredient_CopperIngot = false
+Item_Ingredient_CopperIngot = true
 
 ## Copper Mace https://gaming.tools/v-rising/items/item_weapon_mace_t03_copper
 # Setting type: Boolean
 # Default value: true
-Item_Weapon_Mace_T03_Copper = false
+Item_Weapon_Mace_T03_Copper = true
 
 ## Copper Ore https://gaming.tools/v-rising/items/item_ingredient_copperore
 # Setting type: Boolean
@@ -358,22 +358,22 @@ Item_Ingredient_CopperOre = false
 ## Copper Reaper https://gaming.tools/v-rising/items/item_weapon_reaper_t03_copper
 # Setting type: Boolean
 # Default value: true
-Item_Weapon_Reaper_T03_Copper = false
+Item_Weapon_Reaper_T03_Copper = true
 
 ## Copper Slashers https://gaming.tools/v-rising/items/item_weapon_slashers_t03_copper
 # Setting type: Boolean
 # Default value: true
-Item_Weapon_Slashers_T03_Copper = false
+Item_Weapon_Slashers_T03_Copper = true
 
 ## Copper Spear https://gaming.tools/v-rising/items/item_weapon_spear_t03_copper
 # Setting type: Boolean
 # Default value: true
-Item_Weapon_Spear_T03_Copper = false
+Item_Weapon_Spear_T03_Copper = true
 
 ## Copper Sword https://gaming.tools/v-rising/items/item_weapon_sword_t03_copper
 # Setting type: Boolean
 # Default value: true
-Item_Weapon_Sword_T03_Copper = false
+Item_Weapon_Sword_T03_Copper = true
 
 ## Corrupted Artefact https://gaming.tools/v-rising/items/item_magicsource_general_t07_artifact
 # Setting type: Boolean
@@ -413,7 +413,7 @@ Item_Ingredient_Crown_Darkness = true
 ## Crown of the Archmage https://gaming.tools/v-rising/items/item_headgear_arcmagecrown
 # Setting type: Boolean
 # Default value: true
-Item_Headgear_ArcMageCrown = true
+Item_Headgear_ArcMageCrown = false
 
 ## Crude Amethyst https://gaming.tools/v-rising/items/item_ingredient_gem_amethyst_t01
 # Setting type: Boolean
@@ -1323,7 +1323,7 @@ Item_Ingredient_Plank = true
 ## Plant Fibre https://gaming.tools/v-rising/items/item_ingredient_plant_plantfiber
 # Setting type: Boolean
 # Default value: true
-Item_Ingredient_Plant_PlantFiber = true
+Item_Ingredient_Plant_PlantFiber = false
 
 ## Plated Boneguard Boots https://gaming.tools/v-rising/items/item_boots_t02_bonereinforced
 # Setting type: Boolean
@@ -1388,7 +1388,7 @@ Item_Dummy_PutridRat = false
 ## Quartz https://gaming.tools/v-rising/items/item_ingredient_quartz
 # Setting type: Boolean
 # Default value: true
-Item_Ingredient_Quartz = false
+Item_Ingredient_Quartz = true
 
 ## Rainbow Trout https://gaming.tools/v-rising/items/item_ingredient_fish_rainbowtrout
 # Setting type: Boolean
@@ -1678,12 +1678,12 @@ Item_Ingredient_SilverCoin = true
 ## Silver Ingot https://gaming.tools/v-rising/items/item_ingredient_silverbar
 # Setting type: Boolean
 # Default value: true
-Item_Ingredient_SilverBar = false
+Item_Ingredient_SilverBar = true
 
 ## Silver Ore https://gaming.tools/v-rising/items/item_ingredient_silverore
 # Setting type: Boolean
 # Default value: true
-Item_Ingredient_SilverOre = true
+Item_Ingredient_SilverOre = false
 
 ## Silver Resistance Brew https://gaming.tools/v-rising/items/item_consumable_canteen_silverresistance_t01
 # Setting type: Boolean
@@ -1723,17 +1723,17 @@ Item_Building_Plants_SnowFlower_Seed = true
 ## Soul Shard of Solarus https://gaming.tools/v-rising/items/item_building_relic_paladin
 # Setting type: Boolean
 # Default value: true
-Item_Building_Relic_Paladin = false
+Item_Building_Relic_Paladin = true
 
 ## Soul Shard of the Behemoth https://gaming.tools/v-rising/items/item_building_relic_behemoth
 # Setting type: Boolean
 # Default value: true
-Item_Building_Relic_Behemoth = false
+Item_Building_Relic_Behemoth = true
 
 ## Soul Shard of the Winged Horror https://gaming.tools/v-rising/items/item_building_relic_manticore
 # Setting type: Boolean
 # Default value: true
-Item_Building_Relic_Manticore = false
+Item_Building_Relic_Manticore = true
 
 ## Spectral Dust https://gaming.tools/v-rising/items/item_ingredient_spectraldust
 # Setting type: Boolean
@@ -1763,7 +1763,7 @@ Item_Ingredient_Kit_Construction_T04 = false
 ## Stone https://gaming.tools/v-rising/items/item_ingredient_stone
 # Setting type: Boolean
 # Default value: true
-Item_Ingredient_Stone = true
+Item_Ingredient_Stone = false
 
 ## Stone Body https://gaming.tools/v-rising/items/item_ingredient_stonebody
 # Setting type: Boolean
@@ -1778,7 +1778,7 @@ Item_Ingredient_StoneBrick = true
 ## Stone dust https://gaming.tools/v-rising/items/item_ingredient_stonedust
 # Setting type: Boolean
 # Default value: true
-Item_Ingredient_Stonedust = true
+Item_Ingredient_Stonedust = false
 
 ## Straw Hat https://gaming.tools/v-rising/items/item_headgear_strawhat
 # Setting type: Boolean
@@ -2188,7 +2188,7 @@ Item_Ingredient_Book_Armor_Chest_T04 = true
 ## Tech: Metalwork Station https://gaming.tools/v-rising/items/item_ingredient_book_structure_metalworkstation
 # Setting type: Boolean
 # Default value: true
-Item_Ingredient_Book_Structure_MetalworkStation = true
+Item_Ingredient_Book_Structure_MetalworkStation = false
 
 ## Tech: Minor Sun Resistance Brew https://gaming.tools/v-rising/items/item_ingredient_book_consumable_sunresistance_t01
 # Setting type: Boolean
@@ -2548,7 +2548,7 @@ Item_Consumable_GlassBottle_SpellBrew_T02 = true
 ## Witchdust https://gaming.tools/v-rising/items/item_ingredient_witchdust
 # Setting type: Boolean
 # Default value: true
-Item_Ingredient_Witchdust = true
+Item_Ingredient_Witchdust = false
 
 ## Wolf Head https://gaming.tools/v-rising/items/item_headgear_wolftrophy02
 # Setting type: Boolean
