--- a/BepInEx/config/RandomEncounters/Items.cfg
+++ b/BepInEx/config/RandomEncounters/Items.cfg
@@ -2353,7 +2353,7 @@ Item_Ingredient_Book_Consumable_SpellPower_T03 = true
 ## Tech: Wooden Coffin https://gaming.tools/v-rising/items/item_tech_specialstation_woodencoffin
 # Setting type: Boolean
 # Default value: true
-Item_Tech_SpecialStation_WoodenCoffin = true
+Item_Tech_SpecialStation_WoodenCoffin = false
 
 ## Tech: Workshop Flooring https://gaming.tools/v-rising/items/item_ingredient_book_floor_workshop
 # Setting type: Boolean
