--- a/BepInEx/config/RandomEncounters/Items.cfg
+++ b/BepInEx/config/RandomEncounters/Items.cfg
@@ -2188,7 +2188,7 @@ Item_Ingredient_Book_Armor_Chest_T04 = true
 ## Tech: Metalwork Station https://gaming.tools/v-rising/items/item_ingredient_book_structure_metalworkstation
 # Setting type: Boolean
 # Default value: true
-Item_Ingredient_Book_Structure_MetalworkStation = false
+Item_Ingredient_Book_Structure_MetalworkStation = true
 
 ## Tech: Minor Sun Resistance Brew https://gaming.tools/v-rising/items/item_ingredient_book_consumable_sunresistance_t01
 # Setting type: Boolean
