--- a/BepInEx/config/RPGMods.cfg
+++ b/BepInEx/config/RPGMods.cfg
@@ -1,4 +1,4 @@
-## Settings file was created by plugin RPGMods v0.2.3
+## Settings file was created by plugin RPGMods v0.3.1
 ## Plugin GUID: RPGMods
 
 [Config]
@@ -14,8 +14,8 @@ Prefix = .
 # Default value: 5
 Command Delay = 5
 
-## Enter command names to disable them. Seperated by commas.
-## Ex.: save,godmode,god
+## Enter command names to disable them, abbreviation are included automatically. Seperated by commas.
+## Ex.: save,godmode
 # Setting type: String
 # Default value: 
 Disabled Commands = 
@@ -35,7 +35,7 @@ Enable = true
 ## Configure the experience system max level.
 # Setting type: Int32
 # Default value: 80
-Max Level = 100
+Max Level = 80
 
 ## Multiply the EXP gained by player.
 ## Ex.: 0.7f -> Will reduce the EXP gained by 30%
@@ -216,4 +216,77 @@ Physical Damage Reduction = 0.5
 # Setting type: Single
 # Default value: 0.5
 Spell Damage Reduction = 0.5
+
+[VIP]
+
+## Enable the VIP System.
+# Setting type: Boolean
+# Default value: false
+Enable VIP System = false
+
+## Enable the VIP user to ignore server capacity limit.
+# Setting type: Boolean
+# Default value: false
+Enable VIP Whitelist = false
+
+## The minimum permission level required for the user to be considered as VIP.
+# Setting type: Int32
+# Default value: 10
+Minimum VIP Permission = 10
+
+[VIP.InCombat]
+
+## Multiply durability loss when user is in combat. -1.0 to disable.
+## Does not affect durability loss on death.
+# Setting type: Double
+# Default value: 0.5
+Durability Loss Multiplier = 0.5
+
+## Multiply garlic resistance when user is in combat. -1.0 to disable.
+# Setting type: Double
+# Default value: -1
+Garlic Resistance Multiplier = -1
+
+## Multiply silver resistance when user is in combat. -1.0 to disable.
+# Setting type: Double
+# Default value: -1
+Silver Resistance Multiplier = -1
+
+## Multiply move speed when user is in combat. -1.0 to disable.
+# Setting type: Double
+# Default value: -1
+Move Speed Multiplier = -1
+
+## Multiply resource yield (not item drop) when user is in combat. -1.0 to disable.
+# Setting type: Double
+# Default value: 2
+Resource Yield Multiplier = 2
+
+[VIP.OutCombat]
+
+## Multiply durability loss when user is out of combat. -1.0 to disable.
+## Does not affect durability loss on death.
+# Setting type: Double
+# Default value: 0.5
+Durability Loss Multiplier = 0.5
+
+## Multiply garlic resistance when user is out of combat. -1.0 to disable.
+# Setting type: Double
+# Default value: 2
+Garlic Resistance Multiplier = 2
+
+## Multiply silver resistance when user is out of combat. -1.0 to disable.
+# Setting type: Double
+# Default value: 2
+Silver Resistance Multiplier = 2
+
+## Multiply move speed when user is out of combat. -1.0 to disable.
+# Setting type: Double
+# Default value: 1.25
+Move Speed Multiplier = 1.25
+
+## Multiply resource yield (not item drop) when user is out of combat. -1.0 to disable.
+# Setting type: Double
+# Default value: 2
+Resource Yield Multiplier = 2
 
