--- a/BepInEx/config/RandomEncounters/NPCs.cfg
+++ b/BepInEx/config/RandomEncounters/NPCs.cfg
@@ -198,7 +198,7 @@ CHAR_Militia_Devoted = true
 ## Divine Angel - None (Level: 80) https://gaming.tools/v-rising/npcs/char_paladin_divineangel
 # Setting type: Boolean
 # Default value: true
-CHAR_Paladin_DivineAngel = true
+CHAR_Paladin_DivineAngel = false
 
 ## Errol the Stonebreaker - VBlood (Level: 20) https://gaming.tools/v-rising/npcs/char_bandit_stonebreaker_vblood
 # Setting type: Boolean
@@ -278,7 +278,7 @@ CHAR_Vermin_GiantRat = true
 ## Gorecrusher Spirit - None (Level: 80) https://gaming.tools/v-rising/npcs/char_cursed_mountainbeast_spiritdouble
 # Setting type: Boolean
 # Default value: true
-CHAR_Cursed_MountainBeast_SpiritDouble = true
+CHAR_Cursed_MountainBeast_SpiritDouble = false
 
 ## Gorecrusher the Behemoth - VBlood (Level: 78) https://gaming.tools/v-rising/npcs/char_cursed_mountainbeast_vblood
 # Setting type: Boolean
