--- a/BepInEx/config/RPGMods.cfg
+++ b/BepInEx/config/RPGMods.cfg
@@ -1,4 +1,4 @@
-## Settings file was created by plugin RPGMods v0.3.1
+## Settings file was created by plugin RPGMods v0.3.2
 ## Plugin GUID: RPGMods
 
 [Config]
@@ -121,7 +121,7 @@ Enable Weapon Mastery = true
 ## Enable/disable the decay of weapon mastery when the user is offline.
 # Setting type: Boolean
 # Default value: true
-Enable Mastery Decay = true
+Enable Mastery Decay = false
 
 ## Configure the maximum mastery the user can atain. (100000 is 100%)
 # Setting type: Int32
@@ -141,12 +141,12 @@ Max Combat Ticks = 12
 ## Multiply the gained mastery value by this amount.
 # Setting type: Single
 # Default value: 1
-Mastery Multiplier = 4
+Mastery Multiplier = 1
 
 ## Multiply Mastery gained from VBlood kill.
 # Setting type: Single
 # Default value: 15
-VBlood Mastery Multiplier = 25
+VBlood Mastery Multiplier = 15
 
 ## Every amount of seconds the user is offline by the configured value will translate as 1 decay tick.
 # Setting type: Int32
@@ -156,7 +156,7 @@ Decay Interval = 60
 ## Mastery will decay by this amount for every decay tick.(1 -> 0.001%)
 # Setting type: Int32
 # Default value: 1
-Decay Value = 69
+Decay Value = 1
 
 [PvP]
 
